--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,6 @@
 PORT=8080
-# مفتاح اختياري للتأكد من أن الرسائل تأتي من إضافتك فقط (تحقق بسيط)
-SERVER_SECRET=change-me
+# ضع هنا التوكن الذي تريد أن تقبله الإضافات. إذا تركته فارغاً -> لا يُطبّق تحقق التوكن.
+SERVER_TOKEN=change-me-token
+
 # مدة مهلة heartbeat بالثواني
 HEARTBEAT_SECONDS=30
