--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
+# منفذ التشغيل
 PORT=8080
-# ضع هنا التوكن الذي تريد أن تقبله الإضافات. إذا تركته فارغاً -> لا يُطبّق تحقق التوكن.
-SERVER_TOKEN=change-me-token
-
-# مدة مهلة heartbeat بالثواني
+# مدة نبضات الحياة بالثواني
 HEARTBEAT_SECONDS=30
+# ضع التوكنات المسموح بها مفصولة بفواصل: مثال TOKEN_LIST=alpha,beta,team-123
+TOKEN_LIST=
