--- a/.env.example
+++ b/.env.example
@@ -3,4 +3,4 @@ PORT=8080
 # مدة نبضات الحياة بالثواني
 HEARTBEAT_SECONDS=30
 # ضع التوكنات المسموح بها مفصولة بفواصل: مثال TOKEN_LIST=alpha,beta,team-123
-TOKEN_LIST=
+TOKEN_LIST=mouad
