--- a/package.json
+++ b/package.json
@@ -1,14 +1,13 @@
 {
-  "name": "token-sync-server",
-  "version": "1.0.0",
+  "name": "p2p-token-locked-server",
+  "version": "1.1.0",
   "type": "module",
   "main": "server.js",
-  "scripts": {
-    "start": "node server.js"
-  },
+  "license": "MIT",
+  "scripts": { "start": "node server.js" },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "ws": "^8.18.0",
-    "dotenv": "^16.4.5"
+    "ws": "^8.18.0"
   }
 }
