--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,8 @@
 # منفذ التشغيل
 PORT=8080
+
 # مدة نبضات الحياة بالثواني
 HEARTBEAT_SECONDS=30
-# ضع التوكنات المسموح بها مفصولة بفواصل: مثال TOKEN_LIST=alpha,beta,team-123
-TOKEN_LIST=mouad
+
+# التوكنات المسموح بها (مفصولة بفواصل)
+TOKEN_LIST=mouad,zakaria,ismail,achraf,Najoua,Wasima,mohamed,imane,najlae,nabil
