--- a/.env.example
+++ b/.env.example
@@ -5,4 +5,4 @@ PORT=8080
 HEARTBEAT_SECONDS=30
 
 # التوكنات المسموح بها (مفصولة بفواصل)
-TOKEN_LIST=mouad,zakaria,ismail,achraf,Najoua,Wasima,mohamed,imane,najlae,nabil
+TOKEN_LIST=mouad,zakaria,ismail,achraf,najoua,wasima,mohamed,imane,najlae,nabil
